--- a/src/Bundle/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/CoreBundle/Resources/translations/messages.en.yml
@@ -77,11 +77,18 @@ accard:
                 enabled: Enable activity repository
             behavior:
                 enabled: Enable behavior repository
+                enable_menus: Enable behaviors
                 enable_alcohol: Enable alcohol behavior
                 enable_smoking: Enable smoking behavior
                 enable_illicit_drugs: Enable illict drugs behavior
                 enable_occupation: Enable occupation behavior
                 enable_education: Enable education behavior
+                order: Behavior Menus Order
+                alcohol_order: Alcohol Behaviors
+                smoking_order: Smoking Behaviors
+                illicit_drug_order: Illicit Drug Behaviors
+                occupation_order: Occupation Behaviors
+                education_order: Education Behaviors
             attribute:
                 enabled: Enable attribute repository
                 enable_family_cancer: Enable family cancer attribute
