Added phase translation to patient forms.

--- a/src/Bundle/WebBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/WebBundle/Resources/translations/messages.en.yml
@@ -87,6 +87,7 @@ accard:
             patient:
                 base: Base Fields
                 custom: Custom
+                phases: Phases
     patient:
         form:
             select_patient: Select a patient
