Added filtering to patient index, in doing so I came up with the methodology for allowing filtering.

--- a/src/Bundle/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/CoreBundle/Resources/translations/messages.en.yml
@@ -13,6 +13,11 @@ accard:
             attributes: Attributes
             behaviors: Behaviors
             phases: Phases
+        filter:
+            mrn: Patient MRN
+            first_name: First Name
+            last_name: Last Name
+            deceased: Deceased?
     activity:
         form:
             patient: Patient
