Added PDS setting to patient schema, integrated with the PDS bundle very loosely.

--- a/src/Bundle/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/CoreBundle/Resources/translations/messages.en.yml
@@ -76,6 +76,7 @@ accard:
                 enabled: Enable patient repository
                 import_enabled: Enable patient repository import
                 collect_phases: Collect phases in patient forms
+                pds_enabled: Enable Penn Data Store integration
             diagnosis:
                 enabled: Enable diagnosis repository
                 import_enabled: Enable diagnosis repository import
