Created interface for managing dx phases within dx forms. It is optionally disabled through the dx settings.

--- a/src/Bundle/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/CoreBundle/Resources/translations/messages.en.yml
@@ -88,6 +88,7 @@ accard:
             diagnosis:
                 enabled: Enable diagnosis repository
                 import_enabled: Enable diagnosis repository import
+                collect_phases: Collect phases in diagnosis forms
             activity:
                 enabled: Enable activity repository
             sample:
