--- a/src/Bundle/FieldBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/FieldBundle/Resources/translations/messages.en.yml
@@ -1,3 +1,10 @@
+# This file is part of the Accard package.
+#
+# (c) University of Pennsylvania
+#
+# For the full copyright and license information, please view the LICENSE
+# file that was distributed with this source code.
+
 accard:
     field:
         entity_name: Field
@@ -14,3 +21,6 @@ accard:
             delete: Delete Field
             manage: Manage Field
             manage_all: Manage Fields
+        message:
+            none_found: No fields can be found.
+            not_found: Field can not be found.
