Added regimens into frontend, and validations where required thoughout application.

--- a/src/Bundle/ActivityBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/ActivityBundle/Resources/translations/messages.en.yml
@@ -1,6 +1,8 @@
 accard:
     activity:
         entity_name: Activity
+        activities: Activities
+        regimens: Regimens
         form:
             id: Id
             activity_date: Activity Date
