Added activity choice collection to regimens forms and views.

--- a/src/Bundle/ActivityBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/ActivityBundle/Resources/translations/messages.en.yml
@@ -8,6 +8,7 @@ accard:
             activity_date: Activity Date
             prototype: Prototype
             prototype_label: Activity Type
+            select_activity: Select an activity
         action:
             add: Add Activity
             create: Create Activity
