Added auto highlighting to samplesand fixed a few issues in the forms.

--- a/src/Bundle/SampleBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/SampleBundle/Resources/translations/messages.en.yml
@@ -37,7 +37,7 @@ accard:
         form:
             id: Id
             sample: Parent sample
-            sourceDate: Date
+            source_date: Date
             amount: Amount
             samples: Samples
             derivation: Derivation
