Created drug management library.

--- a/src/Bundle/WebBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/WebBundle/Resources/translations/messages.en.yml
@@ -63,6 +63,7 @@ accard:
             regimen: Regimen
             sample: Sample
             options: Options
+            drugs: Drugs
         frontend:
             home: Home
             repositories: Repositories
