Added allowDrug for activity prototypes, this will serve as the basis for collecting drugs within activities.

--- a/src/Bundle/ActivityBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/ActivityBundle/Resources/translations/messages.en.yml
@@ -30,6 +30,7 @@ accard:
             presentation: Presentation
             fields: Fields
             subjects: Subjects
+            allow_drug: Allow drug to be collected?
         action:
             add: Add Activity Prototype
             create: Create Activity Prototype
