Implementation for story-85548602

--- a/src/Bundle/FieldBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/FieldBundle/Resources/translations/messages.en.yml
@@ -14,6 +14,7 @@ accard:
             type: Type
             option: Option
             allow_multiple: Allow multiple options
+            addable: Addable
         action:
             add: Add Field
             create: Create Field
