Added ability to coherently add activities to a regimen.

--- a/src/Bundle/WebBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/WebBundle/Resources/translations/messages.en.yml
@@ -109,6 +109,10 @@ accard:
                 base: Base Fields
                 custom: Custom
                 phases: Phases
+            regimen:
+                base: Base Fields
+                custom: Custom
+                activities: Activities
     patient:
         form:
             select_patient: Select a patient
