--- a/src/Bundle/PrototypeBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/PrototypeBundle/Resources/translations/messages.en.yml
@@ -13,6 +13,7 @@ accard:
             presentation: Presentation
             fields: Fields
             subjects: Subjects
+            description: Description
         action:
             add: Add Prototype
             add_field: Add Field
