Added ability to translate all interface elements via the database.

--- a/src/Bundle/WebBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/WebBundle/Resources/translations/messages.en.yml
@@ -74,6 +74,7 @@ accard:
             sample: Sample
             options: Options
             drugs: Drugs
+            translations: Translations
         frontend:
             home: Home
             repositories: Repositories
