Added validation that does not allow a Behavior's end date to be before it's start date

--- a/src/Bundle/BehaviorBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/BehaviorBundle/Resources/translations/messages.en.yml
@@ -28,6 +28,8 @@ accard:
             create: Create a New Behavior
             update: Update Behavior
             list: Behaviors
+        error:
+            end_date_before_start_date:  Start date must be after end date
     behavior_prototype:
         entity_name: Behavior Prototype
         form:
