Changing Activity Date translation

--- a/src/Bundle/ActivityBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/ActivityBundle/Resources/translations/messages.en.yml
@@ -5,7 +5,7 @@ accard:
         regimens: Regimens
         form:
             id: Id
-            activity_date: Activity Date
+            activity_date: Start Date
             description: Description
             drug: Drug
             prototype: Prototype
