Enabled diagnosis phases in new UI diagnosis forms.

--- a/src/Bundle/UIBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/UIBundle/Resources/translations/messages.en.yml
@@ -103,6 +103,10 @@ accard:
                 base: Base Fields
                 custom: Custom
                 phases: Phases
+            diagnosis:
+                base: Base Fields
+                custom: Custom
+                phases: Phases
             regimen:
                 base: Base Fields
                 custom: Custom
