Added Twig macro to new UI allowing FieldValue objects to be automatically interpreted in a consistent fashion.

--- a/src/Bundle/UIBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/UIBundle/Resources/translations/messages.en.yml
@@ -20,6 +20,8 @@ accard:
     filter: Filter
     go: Go
     link: Link
+    none: None
+    no_value: No value
     ongoing: Ongoing
     update: Update
     updating: Updating %updated%
